syntax = "proto3";

package player;

service Player {   
	rpc Play(Result) returns (Empty) {}
	rpc PlayAlbum(Results) returns (Empty) {}
	rpc Volume(Float) returns (Float) {}
	rpc Pause(Empty) returns (Empty) {}
	rpc FastForward(Empty) returns (Empty) {}
	rpc Rewind(Empty) returns (Empty) {}
	rpc Queue(Empty) returns (Results) {}
	rpc RemoveFromQueue(Ints) returns (Results) {}
	rpc NextSong(String) returns (stream Result) {}
	rpc PlayProgress(String) returns (stream Progress) {}
	rpc DownloadProgress(String) returns (stream Progress) {}
	rpc History(Page) returns (Results) {}
	rpc Done(String) returns (Empty) {}
	rpc Close(Empty) returns (Empty) {}
}

message Empty {
	
}

message Page {
	int64 page = 1;
	int64 pageSize = 2;
	string sort = 3;
}

message Progress {
	int64 n = 1;
	int64 total = 2;
}

message Float {
	float value = 1;
}

message Int {
	int64 value = 1;
}

message Ints {
	repeated int64 value = 1;
}

message String {
	string value = 1;
}

message Track {
	string id = 1;
	string title = 2;
	int64 duration = 3;
}

message Artist {
	string id = 1;
	string name = 2;
}

message Album {
	string id = 1;
	string title = 2;

}

message Playlist {
	string id = 1;
	string title = 2;
}

message Result {
	string service = 1;
	string path = 2;
	int64 playcount = 3;
	Track track = 4;
	Album album = 5;
	Artist artist = 6;
	Playlist playlist = 7;
}

message Results {
	string type = 1;
	string header = 2;
	string fmt = 3;
	Album album = 4;        
	repeated Result results = 5;
}
